--- a/.scripts/Makefile.tests
+++ b/.scripts/Makefile.tests
@@ -17,6 +17,10 @@ test: build_tests
 	$(OUTPUT_DIR)/test.out
 
 
+debug_test: build_tests
+	$(DB) $(OUTPUT_DIR)/test.out
+
+
 build_tests: 
 	$(MAKE) $(BUILD_DIR)/include/files.json 
 	$(MAKE) $(PCH_OUT)
