start working on building on hot loading systems, use logger and utils as archive files instad of bulding them

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,17 +2,6 @@
 	path = vendor/logger
 	url = git@github.com:Itai-lupo/simple-logger.git
 [submodule "err_macros"]
-	path = vendor/simpleErrorCheck
+	path = vendor/simpleUtils
 	url = git@github.com:Itai-lupo/simple-error-check.git
-[submodule "files"]
-	path = vendor/simpleFiles
-	url = git@github.com:Itai-lupo/simple-files.git
-[submodule "sockets"]
-	path = vendor/simpleSockets
-	url = git@github.com:Itai-lupo/simple-sockets.git
-[submodule "vendor/dataStructures"]
-	path = vendor/dataStructures
-	url = https://github.com/Itai-lupo/simple-data-structures
-[submodule "vendor/simpleMemory"]
-	path = vendor/simpleMemory
-	url = git@github.com:Itai-lupo/simple-memory.git
+
